--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "devDependencies": {
     "mocha" :  "1.9.x",
     "should": "1.2.x",
-    "inotify": "1.2.x",
+    "inotify": "1.2.x"
   },
   "license": "MIT",
   "engines": {
