--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ python:
    - "2.7"
    - "3.2"
    - "3.3"
+install:
+   - pip install pika --use-mirrors
 # command to install dependencies
 #install: "pip install -r requirements.txt --use-mirrors"
 # command to run tests
