--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ python:
    - "3.3"
 install:
    - pip install pika --use-mirrors
+   - pip install nose-cov --use-mirrors
 # command to install dependencies
 #install: "pip install -r requirements.txt --use-mirrors"
 # command to run tests
