--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ install:
 # command to install dependencies
 #install: "pip install -r requirements.txt --use-mirrors"
 # command to run tests
-script: make install
+script: make test
